# nomz

./: .gitignore  README.md  pyproject.toml  tox.ini
nomz/: __main__.py
