[tool.poetry]
name = "sway-nomz"
version = "0.1.0"
description = "Little daemon that allows you to do window swallowing on sway"
authors = ["Sofia Lima <me@dzshn.xyz>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/dzshn/nomz"
repository = "https://github.com/dzshn/nomz"
keywords = ["sway", "wm", "swallow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Utilities",
]
packages = [{ include = "nomz" }]

[tool.poetry.scripts]
nomz = "nomz.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
i3ipc = "^2.2.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.5"

[tool.mypy]
python_version = "3.10"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
